py_pubsub/log/build_2025-04-21_13-07-03/py_pubsub/stderr.log
  File "/home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher_member_function.py", line 51
    self.publisher_.publish(Twist(linear=Vector3(x=0.0, y=0.0, z=-0.5), linear=Vector3(x=0.0, y=0.0, z=1.0)))
                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: linear

